[gd_scene load_steps=65 format=2]

[ext_resource path="res://gameoffline2/Script/hero.gd" type="Script" id=1]
[ext_resource path="res://mapPack/hero/Idle.png" type="Texture" id=2]
[ext_resource path="res://mapPack/hero/Run.png" type="Texture" id=3]
[ext_resource path="res://mapPack/hero/Jetpack.png" type="Texture" id=4]
[ext_resource path="res://mapPack/hero/Shoot.png" type="Texture" id=5]
[ext_resource path="res://gameoffline2/Scene/Weapons_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://music/gun.ogg" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 449, 452 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 449, 0, 449, 452 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 898, 0, 449, 452 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1347, 0, 449, 452 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1796, 0, 449, 452 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2245, 0, 449, 452 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 452, 449, 452 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 449, 452, 449, 452 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 898, 452, 449, 452 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1347, 452, 449, 452 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1796, 452, 449, 452 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2245, 452, 449, 452 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 754, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1508, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2262, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3016, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3770, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4524, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5278, 0, 754, 502 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 754, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1508, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2262, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3016, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3770, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4524, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5278, 502, 754, 502 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 645, 552 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 645, 0, 645, 552 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1290, 0, 645, 552 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1935, 0, 645, 552 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2580, 0, 645, 552 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 552, 645, 552 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 645, 552, 645, 552 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1290, 552, 645, 552 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1935, 552, 645, 552 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2580, 552, 645, 552 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1104, 645, 552 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 645, 1104, 645, 552 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1290, 1104, 645, 552 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1935, 1104, 645, 552 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2580, 1104, 645, 552 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 530, 475 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 530, 0, 530, 475 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 0, 530, 475 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1590, 0, 530, 475 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 0, 530, 475 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2650, 0, 530, 475 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 475, 530, 475 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 530, 475, 530, 475 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 475, 530, 475 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1590, 475, 530, 475 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 475, 530, 475 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2650, 475, 530, 475 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "shoot",
"speed": 30.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "jump",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=14]

[node name="hero" type="KinematicBody2D" groups=["hero"]]
collision_mask = 28
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Weapons_menu" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = -1.0
margin_top = 268.0
margin_right = 39.0
margin_bottom = 308.0

[node name="animationhero" type="AnimatedSprite" parent="."]
position = Vector2( 4, -23 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 13 )
animation = "shoot"
frame = 11
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -21 )
shape = SubResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 43, -26 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -51, -28 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -2, -43 )

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="animation_finished" from="animationhero" to="." method="_on_animationhero_animation_finished"]
